--- a/public/css/fontello.css
+++ b/public/css/fontello.css
@@ -1,14 +1,13 @@
 @font-face {
   font-family: 'fontello';
-  src: url('../font/fontello.eot?50559121');
-  src: url('../font/fontello.eot?50559121#iefix') format('embedded-opentype'),
-       url('../font/fontello.woff2?50559121') format('woff2'),
-       url('../font/fontello.woff?50559121') format('woff'),
-       url('../font/fontello.ttf?50559121') format('truetype'),
-       url('../font/fontello.svg?50559121#fontello') format('svg');
+  src: url('../font/fontello.eot?7277871');
+  src: url('../font/fontello.eot?7277871#iefix') format('embedded-opentype'),
+       url('../font/fontello.woff2?7277871') format('woff2'),
+       url('../font/fontello.woff?7277871') format('woff'),
+       url('../font/fontello.ttf?7277871') format('truetype'),
+       url('../font/fontello.svg?7277871#fontello') format('svg');
   font-weight: normal;
   font-style: normal;
-  font-display: swap;
 }
 /* Chrome hack: SVG is rendered more smooth in Windozze. 100% magic, uncomment if you need it. */
 /* Note, that will break hinting! In other OS-es font will be not as sharp as it could be */
@@ -16,7 +15,7 @@
 @media screen and (-webkit-min-device-pixel-ratio:0) {
   @font-face {
     font-family: 'fontello';
-    src: url('../font/fontello.svg?50559121#fontello') format('svg');
+    src: url('../font/fontello.svg?7277871#fontello') format('svg');
   }
 }
 */
@@ -55,11 +54,12 @@
   /* text-shadow: 1px 1px 1px rgba(127, 127, 127, 0.3); */
 }
 
-.icon-cc:before { content: '\e800'; } /* '' */
-.icon-cc-by:before { content: '\e801'; } /* '' */
-.icon-cc-nc:before { content: '\e802'; } /* '' */
-.icon-ok-circled:before { content: '\e803'; } /* '' */
-.icon-attention-circled:before { content: '\e804'; } /* '' */
+.icon-bluesky:before { content: '\e800'; } /* '' */
+.icon-cc:before { content: '\e801'; } /* '' */
+.icon-cc-by:before { content: '\e802'; } /* '' */
+.icon-cc-nc:before { content: '\e803'; } /* '' */
+.icon-ok-circled:before { content: '\e804'; } /* '' */
+.icon-attention-circled:before { content: '\e805'; } /* '' */
 .icon-spin5:before { content: '\e838'; } /* '' */
 .icon-github-circled:before { content: '\f09b'; } /* '' */
 .icon-mail-alt:before { content: '\f0e0'; } /* '' */
